Выполнил задание в файлах .html

--- a/lesson2.html
+++ b/lesson2.html
@@ -4,19 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Задание 1</title>
-    <script>
-        function greetUser() {
-            // Спросим у пользователя его возраст
-            var age = prompt("Ваш возраст");
-            // Выведем возраст на экран
-            alert("Вам " + age + " лет");
-
-            // Спросим у пользователя его имя
-            var name = prompt("Как вас зовут?");
-            // Приветствуем пользователя
-            alert("Добро пожаловать на сайт, " + name);
-        }
-    </script>
+    <script src="lessons2.js"></script>
 </head>
 <body onload="greetUser()">
     <h1>Приветствие</h1>
